--- a/DublinBikes/DublinBikes/Views/Shared/_Layout.cshtml
+++ b/DublinBikes/DublinBikes/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="BikeStations" asp-action="Index">Bike Stations</a>
+                    </li>
                 </ul>
                 <p class="nav navbar-text">Hello, @User.Identity.Name!</p>
             </div>
