swap Name genre to open close genre

--- a/DublinBikes/DublinBikes/Views/BikeStations/Index.cshtml
+++ b/DublinBikes/DublinBikes/Views/BikeStations/Index.cshtml
@@ -12,7 +12,7 @@
 </p>
 <form asp-controller="BikeStations" asp-action="Index">
     <p>
-        <select asp-for="BikeStationName" asp-items="Model.Names">
+        <select asp-for="BikeStationName" asp-items="Model.Statuss">
             <option value="">All</option>
         </select>
         
