--- a/DublinBikes/DublinBikes/Views/BikeStations/Create.cshtml
+++ b/DublinBikes/DublinBikes/Views/BikeStations/Create.cshtml
@@ -63,6 +63,11 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="paymentAtTheTerminal" class="control-label"></label>
+                <input asp-for="paymentAtTheTerminal" class="form-control" />
+                <span asp-validation-for="paymentAtTheTerminal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
