--- a/DublinBikes/DublinBikes/Views/BikeStations/Delete.cshtml
+++ b/DublinBikes/DublinBikes/Views/BikeStations/Delete.cshtml
@@ -72,7 +72,7 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.paymentAtTheTerminal)
+            <p>Payment at the terminal</p>
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.paymentAtTheTerminal)
