--- a/DublinBikes/DublinBikes/Views/BikeStations/Details.cshtml
+++ b/DublinBikes/DublinBikes/Views/BikeStations/Details.cshtml
@@ -71,7 +71,7 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.paymentAtTheTerminal)
+            <p>Payement at the terminal</p>
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.paymentAtTheTerminal)
